// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel macro css 1`] = `
"import { css as _css } from '../../src';

_css([], [widthVar], function createEmotionStyledRules(x0) {
    return [{
        'margin': '12px 48px',
        'color': '#ffffff; color: blue',
        'display': '-webkit-box; display: -ms-flexbox; display: flex',
        'WebkitBoxFlex': '1',
        'msFlex': '1 0 auto',
        'flex': '1 0 auto',
        'width': \`\${x0}\`
    }];
});"
`;

exports[`babel macro css object 1`] = `
"import { css as _css } from '../../src';

const cls1 = _css({ display: 'flex' });"
`;

exports[`babel macro flush 1`] = `
"import { flush as _flush } from '../../src';

const someOtherVar = _flush;"
`;

exports[`babel macro fontFace 1`] = `
"import { fontFace as _fontFace } from '../../src';

_fontFace([], [], function createEmotionStyledRules() {
     return [{
          'fontFamily': 'MyHelvetica',
          'src': 'local(\\"Helvetica Neue Bold\\"),\\\\n         local(\\"HelveticaNeue-Bold\\"),\\\\n         url(MgOpenModernaBold.ttf)',
          'fontWeight': 'bold'
     }];
});"
`;

exports[`babel macro hydrate 1`] = `
"import { hydrate as _hydrate } from '../../src';

const someOtherVar = _hydrate;"
`;

exports[`babel macro injectGlobal 1`] = `
"import { injectGlobal as _injectGlobal } from '../../src';

_injectGlobal([], [], function createEmotionStyledRules() {
  return [{
    'body': {
      'margin': '0',
      'padding': '0'
    },
    'body > div': {
      'display': 'none'
    },
    'body > div:hover': {
      'color': 'green'
    },
    'body > div:hover span': {
      'color': 'red'
    },
    'body > div:hover span:after': {
      'content': '\\"end of line\\"'
    },
    'html': {
      'background': 'green'
    }
  }];
});"
`;

exports[`babel macro keyframes 1`] = `
"import { keyframes as _keyframes } from '../../src';

const rotate360 = _keyframes([], [], function createEmotionStyledRules() {
  return [{
    'from': {
      'WebkitTransform': 'rotate(0deg)',
      'transform': 'rotate(0deg)'
    },
    'to': {
      'WebkitTransform': 'rotate(360deg)',
      'transform': 'rotate(360deg)'
    }
  }];
});"
`;

exports[`babel macro multiple imports 1`] = `
"import { keyframes as _keyframes, css as _css } from '../../src';

const rotate360 = _keyframes([], [], function createEmotionStyledRules() {
  return [{
    'from': {
      'WebkitTransform': 'rotate(0deg)',
      'transform': 'rotate(0deg)'
    },
    'to': {
      'WebkitTransform': 'rotate(360deg)',
      'transform': 'rotate(360deg)'
    }
  }];
});
const thing = _css([], [widthVar], function createEmotionStyledRules(x0) {
  return [{
    'margin': '12px 48px',
    'color': '#ffffff; color: blue',
    'display': '-webkit-box; display: -ms-flexbox; display: flex',
    'WebkitBoxFlex': '1',
    'msFlex': '1 0 auto',
    'flex': '1 0 auto',
    'width': \`\${x0}\`
  }];
});"
`;

exports[`babel macro some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from '../../src';

const someOtherVar = _thisDoesNotExist;"
`;

exports[`babel macro styled css from react 1`] = `
"import { css as _css } from '../../src/react';

const someCls = _css([], [], function createEmotionStyledRules() {
  return [{
    'display': '-webkit-box; display: -ms-flexbox; display: flex'
  }];
});"
`;

exports[`babel macro styled object function 1`] = `
"import _styled from '../../src/react';

const SomeComponent = _styled('div', [{
  display: '-webkit-box; display: -ms-flexbox; display: flex'
}]);"
`;

exports[`babel macro styled object member 1`] = `
"import _styled from '../../src/react';

const SomeComponent = _styled('div', [{
  display: '-webkit-box; display: -ms-flexbox; display: flex'
}]);"
`;

exports[`babel macro styled some import that does not exist 1`] = `
"import { thisDoesNotExist as _thisDoesNotExist } from '../../src/react';

const someOtherVar = _thisDoesNotExist;"
`;

exports[`babel macro styled tagged template literal function 1`] = `
"import _styled from '../../src/react';

const SomeComponent = _styled('div', [], [], function createEmotionStyledRules() {
  return [{
    'display': '-webkit-box; display: -ms-flexbox; display: flex'
  }];
});"
`;

exports[`babel macro styled tagged template literal member 1`] = `
"import _styled from '../../src/react';

const SomeComponent = _styled('div', [], [], function createEmotionStyledRules() {
  return [{
    'display': '-webkit-box; display: -ms-flexbox; display: flex'
  }];
});"
`;
